deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: devops-intermidate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: 128622299357.dkr.ecr.us-east-2.amazonaws.com/my-exam-repo:latest
        ports:
        - containerPort: 80
