ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: devops-intermidate
  name: artak
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-07f48874e57990080, subnet-029e44a3f536290fc
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-service
              port:
                number: 80
